@@ -1,0 +1,2 @@
+#!/bin/sh
+exec /usr/bin/pcf8574_lcdd -i /dev/i2c-1 -a 27 -t 1 2>&1
