@@ -1,0 +1,1 @@
+run_daemon_lcd2004.sh
